# py-route

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
.github/workflows/: main copy.yml  main.yml
app/: main.py  model.py
py_route/: config.py  handler.py  main.py  model.py
tests/: conftest.py  test_handler.py  test_model.py  test_route.py
